insights: kill the noise in anomaly + missed-payment detectors
Persona JTBD audit (scripts/audit-persona-insights.py) found that
three of the five Overview insight surfaces were almost entirely
false positives:

- Saver (healthy):    22 anomalies, 3 'missed payments'
- Debt-heavy:         20 anomalies, 2 'missed payments'
- Paycheck:           13 anomalies, 1 'missed payment'
- Spender:            84 anomalies (!)

Almost every anomaly was 'First-time transaction with Rent
purchase for $X' — fired for every monthly rent payment because:
  (a) The recurring rent category was never excluded
  (b) The detector built its 'known merchants' set from the
      historical window only. For users with <90d of history that
      set is empty, so each occurrence of the same merchant in
      the recent window re-fires.

Missed-payments were 'Expected bi-weekly payment of $X' rows from
Dining / Shopping / Transactions — none of which are bills. The
detector grouped on merchant + $10-rounded amount, so three
dining transactions that coincidentally landed in the same
$10 bucket at ~14-day intervals got labelled as a recurring bill.

Fixes:

TransactionAnomalyService.detectMerchantAnomalies:
  - Skip RECURRING_CATEGORIES (rent, mortgage, loan, utilities,
    insurance, tax) — these are by definition expected.
  - Iterate recent transactions in chronological order and mutate
    the known-merchants set as we go, so the SECOND rent in the
    recent window is no longer 'first-time'.

TransactionAnomalyService.detectDuplicates:
  - Raise minimum amount from $0 to $50. Two $9 healthcare copays
    on the same day aren't a duplicate-charge alert; they're life.

MissedPaymentDetectionService.detectRecurringPaymentPatterns:
  - Skip DISCRETIONARY_CATEGORIES (dining, groceries, shopping,
    transportation, entertainment, travel, healthcare, personal,
    other). Real bills are utilities / rent / loan / insurance.
  - Tighten amount grouping from $10-rounded to exact cents.
  - Require int